--- a/Ogani Tempalte/blog-details.html
+++ b/Ogani Tempalte/blog-details.html
@@ -239,11 +239,11 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="blog__details__hero__text">
-              <h2>The Moment You Need To Remove Garlic From The Menu</h2>
+              <h2>Cảnh báo: 5 chiêu trò lừa đảo thẻ cào game thủ cần tránh</h2>
               <ul>
-                <li>By Michael Scofield</li>
-                <li>January 14, 2019</li>
-                <li>8 Comments</li>
+                <li>Đăng bởi: <b>Admin Support</b></li>
+                <li>Ngày 4 tháng 12, 2025</li>
+                <li>8 Bình luận</li>
               </ul>
             </div>
           </div>
@@ -267,17 +267,17 @@
                 </form>
               </div>
               <div class="blog__sidebar__item">
-                <h4>Categories</h4>
+                <h4>Danh mục bài viết</h4>
                 <ul>
-                  <li><a href="#">All</a></li>
-                  <li><a href="#">Beauty (20)</a></li>
-                  <li><a href="#">Food (5)</a></li>
-                  <li><a href="#">Life Style (9)</a></li>
-                  <li><a href="#">Travel (10)</a></li>
+                  <li><a href="#">Tất cả tin tức</a></li>
+                  <li><a href="#">Tin Khuyến Mãi (20)</a></li>
+                  <li><a href="#">Hướng dẫn nạp thẻ (5)</a></li>
+                  <li><a href="#">Sự kiện Game (9)</a></li>
+                  <li><a href="#">Cảnh báo / Bảo mật</a></li>
                 </ul>
               </div>
               <div class="blog__sidebar__item">
-                <h4>Recent News</h4>
+                <h4>Bài viết mới nhất</h4>
                 <div class="blog__sidebar__recent">
                   <a href="#" class="blog__sidebar__recent__item">
                     <div class="blog__sidebar__recent__item__pic">
@@ -285,10 +285,9 @@
                     </div>
                     <div class="blog__sidebar__recent__item__text">
                       <h6>
-                        09 Kinds Of Vegetables<br />
-                        Protect The Liver
+                        Cách nhận Giftcode Liên Quân Mobile mới <br>nhất 2025
                       </h6>
-                      <span>MAR 05, 2019</span>
+                      <span>Ngày 4 tháng 12 năm 2025</span>
                     </div>
                   </a>
                   <a href="#" class="blog__sidebar__recent__item">
@@ -297,10 +296,9 @@
                     </div>
                     <div class="blog__sidebar__recent__item__text">
                       <h6>
-                        Tips You To Balance<br />
-                        Nutrition Meal Day
+                        Lịch bảo trì hệ thống nạp thẻ Garena ngày 15/12
                       </h6>
-                      <span>MAR 05, 2019</span>
+                      <span>Ngày 4 tháng 12 năm 2025</span>
                     </div>
                   </a>
                   <a href="#" class="blog__sidebar__recent__item">
@@ -309,22 +307,22 @@
                     </div>
                     <div class="blog__sidebar__recent__item__text">
                       <h6>
-                        4 Principles Help You Lose <br />Weight With Vegetables
+                        Top 3 cách mua thẻ cào giá rẻ an toàn<br> tuyệt đối
                       </h6>
-                      <span>MAR 05, 2019</span>
+                      <span>Ngày 4 tháng 12 năm 2025</span>
                     </div>
                   </a>
                 </div>
               </div>
               <div class="blog__sidebar__item">
-                <h4>Tìm kiếm theo</h4>
+                <h4>Từ khóa nổi bật</h4>
                 <div class="blog__sidebar__item__tags">
-                  <a href="#">Apple</a>
-                  <a href="#">Beauty</a>
-                  <a href="#">Vegetables</a>
-                  <a href="#">Fruit</a>
-                  <a href="#">Healthy Food</a>
-                  <a href="#">Lifestyle</a>
+                  <a href="#">Garena</a>
+                  <a href="#">Khuyến mãi</a>
+                  <a href="#">Giftcode</a>
+                  <a href="#">Free Fire</a>
+                  <a href="#">Liên Quân</a>
+                  <a href="#">Esports</a>
                 </div>
               </div>
             </div>
@@ -333,40 +331,30 @@
             <div class="blog__details__text">
               <img src="img/blog/details/details-pic.jpg" alt="" />
               <p>
-                Sed porttitor lectus nibh. Vestibulum ac diam sit amet quam
-                vehicula elementum sed sit amet dui. Curabitur non nulla sit
-                amet nisl tempus convallis quis ac lectus. Mauris blandit
-                aliquet elit, eget tincidunt nibh pulvinar a. Vivamus magna
-                justo, lacinia eget consectetur sed, convallis at tellus. Sed
-                porttitor lectus nibh. Donec sollicitudin molestie malesuada.
-                Curabitur non nulla sit amet nisl tempus convallis quis ac
-                lectus. Proin eget tortor risus. Donec rutrum congue leo eget
-                malesuada. Curabitur non nulla sit amet nisl tempus convallis
-                quis ac lectus. Donec sollicitudin molestie malesuada. Nulla
-                quis lorem ut libero malesuada feugiat. Curabitur arcu erat,
-                accumsan id imperdiet et, porttitor at sem.
+                Hiện nay, có rất nhiều trang web giả mạo NapTheVip để lừa đảo chiếm đoạt thẻ cào của game thủ. 
+                Để đảm bảo an toàn cho túi tiền của mình, các bạn tuyệt đối không đăng nhập tài khoản game vào các đường link lạ 
+                được gửi qua tin nhắn Facebook hoặc Zalo.
+              </p>
+              <p>
+                Hệ thống của chúng tôi chỉ hoạt động duy nhất tại địa chỉ website chính thức. 
+                Mọi giao dịch đều được mã hóa và bảo vệ 2 lớp. Nếu gặp bất kỳ sự cố nào khi nạp thẻ, 
+                hãy liên hệ ngay với đội ngũ CSKH để được hỗ trợ kịp thời.
               </p>
               <h3>
-                The corner window forms a place within a place that is a resting
-                point within the large space.
-              </h3>
-              <p>
-                The study area is located at the back with a view of the vast
-                nature. Together with the other buildings, a congruent story has
-                been managed in which the whole has a reinforcing effect on the
-                components. The use of materials seeks connection to the main
-                house, the adjacent stables
-              </p>
+                "Lưu ý quan trọng: Tuyệt đối không cung cấp mật khẩu cấp 2 hoặc mã OTP cho bất kỳ ai, 
+                kể cả người tự xưng là nhân viên hỗ trợ (Admin). Chúng tôi không bao giờ yêu cầu mật khẩu của bạn."
+                _ Ban Quản Trị NapTheVip _
+              <h3>
             </div>
             <div class="blog__details__content">
               <div class="row">
                 <div class="col-lg-6">
                   <div class="blog__details__author">
                     <div class="blog__details__author__pic">
-                      <img src="img/blog/details/details-author.jpg" alt="" />
+                      <img src="img/blog/details/details-author.png" alt="" />
                     </div>
                     <div class="blog__details__author__text">
-                      <h6>Michael Scofield</h6>
+                      <h6>NapTheVip Team</h6>
                       <span>Admin</span>
                     </div>
                   </div>
@@ -374,10 +362,9 @@
                 <div class="col-lg-6">
                   <div class="blog__details__widget">
                     <ul>
-                      <li><span>Categories:</span> Food</li>
+                      <li><span>Hướng dẫn / Bảo mật</span></li>
                       <li>
-                        <span>Tags:</span> All, Trending, Cooking, Healthy Food,
-                        Life Style
+                        Garena, Bao mat, Nap the, Canh bao.
                       </li>
                     </ul>
                     <div class="blog__details__social">
@@ -403,7 +390,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="section-title related-blog-title">
-              <h2>Post You May Like</h2>
+              <h2>Có thể bạn quan tâm</h2>
             </div>
           </div>
         </div>
@@ -415,13 +402,12 @@
               </div>
               <div class="blog__item__text">
                 <ul>
-                  <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                  <li><i class="fa fa-calendar-o"></i> Ngày 4 tháng 12 năm 2025</li>
                   <li><i class="fa fa-comment-o"></i> 5</li>
                 </ul>
-                <h5><a href="#">Cooking tips make cooking simple</a></h5>
+                <h5><a href="#">Nạp thẻ Garena, Zing, Vcoin nhận ngay ưu đãi "khủng" tháng 12</a></h5>
                 <p>
-                  Sed quia non numquam modi tempora indunt ut labore et dolore
-                  magnam aliquam quaerat
+                  Đừng bỏ lỡ cơ hội nạp Quân Huy, Kim Cương, RP với chiết khấu cực cao trong tháng này. Xem ngay chi tiết sự kiện!
                 </p>
               </div>
             </div>
@@ -433,13 +419,12 @@
               </div>
               <div class="blog__item__text">
                 <ul>
-                  <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                  <li><i class="fa fa-calendar-o"></i> Ngày 4 tháng 12 năm 2025</li>
                   <li><i class="fa fa-comment-o"></i> 5</li>
                 </ul>
-                <h5><a href="#">6 ways to prepare breakfast for 30</a></h5>
+                <h5><a href="#">Cách nhận ngay 10K từ MoMo cho lần đầu nạp thẻ tại NapTheVip</a></h5>
                 <p>
-                  Sed quia non numquam modi tempora indunt ut labore et dolore
-                  magnam aliquam quaerat
+                  Bạn đã biết cách nhập mã MOMONAPTHENGAY để được giảm giá 10k chưa? Làm theo hướng dẫn đơn giản sau đây để nhận quà.
                 </p>
               </div>
             </div>
@@ -451,13 +436,12 @@
               </div>
               <div class="blog__item__text">
                 <ul>
-                  <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                  <li><i class="fa fa-calendar-o"></i> Ngày 4 tháng 12 năm 2025</li>
                   <li><i class="fa fa-comment-o"></i> 5</li>
                 </ul>
-                <h5><a href="#">Visit the clean farm in the US</a></h5>
+                <h5><a href="#">Lịch khuyến mãi nạp thẻ điện thoại Viettel, Vina, Mobi mới nhất</a></h5>
                 <p>
-                  Sed quia non numquam modi tempora indunt ut labore et dolore
-                  magnam aliquam quaerat
+                  Cập nhật nhanh lịch "Ngày Vàng", "Khuyến mãi Data 4G/5G" từ các nhà mạng để không bỏ lỡ cơ hội nạp thẻ lời nhất.
                 </p>
               </div>
             </div>
