--- a/Ogani Tempalte/shop-details.html
+++ b/Ogani Tempalte/shop-details.html
@@ -218,11 +218,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Vegetable’s Package</h2>
+                        <h2>Chi tiết thẻ nạp</h2>
                         <div class="breadcrumb__option">
                             <a href="./index.html">Trang chủ</a>
-                            <a href="./index.html">Vegetables</a>
-                            <span>Vegetable’s Package</span>
+                            <a href="./index.html">Thẻ game</a>
+                            <span>Thẻ Garena 500k</span>
                         </div>
                     </div>
                 </div>
@@ -241,33 +241,22 @@
                             <img class="product__details__pic__item--large"
                                 src="img/product/details/product-details-1.jpg" alt="">
                         </div>
-                        <div class="product__details__pic__slider owl-carousel">
-                            <img data-imgbigurl="img/product/details/product-details-2.jpg"
-                                src="img/product/details/thumb-1.jpg" alt="">
-                            <img data-imgbigurl="img/product/details/product-details-3.jpg"
-                                src="img/product/details/thumb-2.jpg" alt="">
-                            <img data-imgbigurl="img/product/details/product-details-5.jpg"
-                                src="img/product/details/thumb-3.jpg" alt="">
-                            <img data-imgbigurl="img/product/details/product-details-4.jpg"
-                                src="img/product/details/thumb-4.jpg" alt="">
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <div class="product__details__text">
-                        <h3>Vetgetable’s Package</h3>
+                        <h3>Thẻ Garena mệnh giá 500.000đ</h3>
                         <div class="product__details__rating">
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-half-o"></i>
-                            <span>(18 reviews)</span>
+                            <span>(18 đánh giá)</span>
                         </div>
-                        <div class="product__details__price">$50.00</div>
-                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vestibulum ac diam sit amet quam
-                            vehicula elementum sed sit amet dui. Sed porttitor lectus nibh. Vestibulum ac diam sit amet
-                            quam vehicula elementum sed sit amet dui. Proin eget tortor risus.</p>
+                        <div class="product__details__price">500.000 VND</div>
+                        <p>Thẻ Garena chính hãng, nạp được cho tất cả các tựa game của Garena như: Liên Minh Huyền Thoại, FIFA Online 4, Liên Quân Mobile, Free Fire... <br>
+                        Mã thẻ và Số seri sẽ hiện ngay trên màn hình và gửi về Email của bạn sau khi thanh toán thành công.</p>
                         <div class="product__details__quantity">
                             <div class="quantity">
                                 <div class="pro-qty">
@@ -275,13 +264,13 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#" class="primary-btn">ADD TO CARD</a>
+                        <a href="#" class="primary-btn">THÊM VÀO GIỎ</a>
                         <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                         <ul>
-                            <li><b>Availability</b> <span>In Stock</span></li>
-                            <li><b>Shipping</b> <span>01 day shipping. <samp>Free pickup today</samp></span></li>
-                            <li><b>Weight</b> <span>0.5 kg</span></li>
-                            <li><b>Share on</b>
+                            <li><b>Tình trạng</b> <span>Còn hàng</span></li>
+                            <li><b>Hình thức nhận</b> <span>Nhận mã thẻ ngay lập tức.</span></li>
+                            <li><b>Nhà phát hành</b> <span>Garena</span></li>
+                            <li><b>Chia sẻ</b>
                                 <div class="share">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
@@ -297,76 +286,91 @@
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active" data-toggle="tab" href="#tabs-1" role="tab"
-                                    aria-selected="true">Description</a>
+                                    aria-selected="true">Mô tả sản phẩm</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab"
-                                    aria-selected="false">Information</a>
+                                    aria-selected="false">Thông tin chi tiết</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab"
-                                    aria-selected="false">Reviews <span>(1)</span></a>
+                                    aria-selected="false">Đánh giá <span>(1)</span></a>
                             </li>
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane active" id="tabs-1" role="tabpanel">
                                 <div class="product__details__tab__desc">
-                                    <h6>Products Infomation</h6>
-                                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-                                        Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Vivamus
-                                        suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam
-                                        vehicula elementum sed sit amet dui. Donec rutrum congue leo eget malesuada.
-                                        Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur arcu erat,
-                                        accumsan id imperdiet et, porttitor at sem. Praesent sapien massa, convallis a
-                                        pellentesque nec, egestas non nisi. Vestibulum ac diam sit amet quam vehicula
-                                        elementum sed sit amet dui. Vestibulum ante ipsum primis in faucibus orci luctus
-                                        et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
-                                        vel, ullamcorper sit amet ligula. Proin eget tortor risus.</p>
-                                        <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem
-                                        ipsum dolor sit amet, consectetur adipiscing elit. Mauris blandit aliquet
-                                        elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna dictum
-                                        porta. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus
-                                        nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-                                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Sed
-                                        porttitor lectus nibh. Vestibulum ac diam sit amet quam vehicula elementum
-                                        sed sit amet dui. Proin eget tortor risus.</p>
+                                    <h6>Giới thiệu Thẻ Garena (Sò)</h6>
+                                    <p>Thẻ Garena (hay còn gọi là Thẻ Sò) là loại thẻ đa năng dùng để nạp tiền cho các tựa game đình đám do Garena phát hành tại Việt Nam. 
+                                    Khi nạp thẻ, bạn sẽ nhận được Sò, Kim Cương hoặc FC Point để mua vật phẩm, trang phục và nâng cấp nhân vật trong game.</p>
+                                    <p>
+                                        <b>Các game hỗ trợ nạp:</b>
+                                        <br>- Liên Minh Huyền Thoại (League of Legends)
+                                        <br>- Liên Quân Mobile (Arena of Valor)
+                                        <br>- Free Fire
+                                        <br>- FC Online (FIFA Online 4)
+                                        <br>- Blade & Soul
+                                        <br>- Cái Thế Tranh Hùng
+                                    </p>
+                                    <p>
+                                        <b>Tại sao nên mua tại NapTheVip?</b>
+                                        <br>Hệ thống của chúng tôi cam kết gửi mã thẻ tự động ngay lập tức sau khi thanh toán. Bảo mật tuyệt đối, chiết khấu cao giúp bạn tiết kiệm chi phí hơn so với mua trực tiếp trong game.
+                                    </p>
                                 </div>
                             </div>
                             <div class="tab-pane" id="tabs-2" role="tabpanel">
                                 <div class="product__details__tab__desc">
-                                    <h6>Products Infomation</h6>
-                                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-                                        Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus.
-                                        Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam
-                                        sit amet quam vehicula elementum sed sit amet dui. Donec rutrum congue leo
-                                        eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.
-                                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent
-                                        sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ac
-                                        diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante
-                                        ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-                                        Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                                        Proin eget tortor risus.</p>
-                                    <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem
-                                        ipsum dolor sit amet, consectetur adipiscing elit. Mauris blandit aliquet
-                                        elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna dictum
-                                        porta. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus
-                                        nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
+                                    <h6>Thông số kỹ thuật & Quy định</h6>
+                                    <p>Dưới đây là các thông tin chi tiết về sản phẩm thẻ nạp mà bạn cần lưu ý:</p>
+    
+                                    <ul style="list-style-type: disc; margin-left: 20px; line-height: 2;">
+                                        <li><b>Loại sản phẩm:</b> Mã thẻ điện tử (Gồm Mã nạp + Số Seri).</li>
+                                        <li><b>Phạm vi sử dụng:</b> Chỉ áp dụng cho tài khoản game khu vực <b>Việt Nam</b>.</li>
+                                        <li><b>Thiết bị nạp:</b> Máy tính (PC), Điện thoại (Mobile), Website nạp chính thức.</li>
+                                        <li><b>Hạn sử dụng:</b> Thẻ mới 100%, hạn sử dụng tuân theo quy định của Nhà phát hành (thường là vĩnh viễn hoặc rất dài).</li>
+                                        <li><b>Chính sách bảo hành:</b> 
+                                            <br> - Cam kết 1 đổi 1 nếu mã thẻ bị lỗi do hệ thống.
+                                            <br> - Không chịu trách nhiệm nếu khách hàng để lộ mã thẻ cho người khác hoặc nạp nhầm vào tài khoản sai.
+                                        </li>
+                                        <li><b>Hướng dẫn nạp nhanh:</b> Copy mã thẻ -> Vào trang nạp -> Dán mã -> Xác nhận.</li>
+                                    </ul>
                                 </div>
                             </div>
                             <div class="tab-pane" id="tabs-3" role="tabpanel">
                                 <div class="product__details__tab__desc">
-                                    <h6>Products Infomation</h6>
-                                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-                                        Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus.
-                                        Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam
-                                        sit amet quam vehicula elementum sed sit amet dui. Donec rutrum congue leo
-                                        eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.
-                                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent
-                                        sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ac
-                                        diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante
-                                        ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-                                        Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                                        Proin eget tortor risus.</p>
+                                    <h6>Đánh giá từ khách hàng (1)</h6>
+                                    <div class="blog__details__comment">
+                                        <div class="blog__details__comment__item">
+                                            <h6>Hoàng Nam</h6>
+                                            <span>4 Tháng 12, 2025</span>
+                                            <div class="product__details__rating">
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                            </div>
+                                            <p>Web uy tín quá shop ơi! Mình vừa thanh toán xong là mã thẻ hiện lên ngay lập tức. Nạp vào game thành công 100%. Sẽ ủng hộ shop dài dài.</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="contact-form spad" style="padding-top: 30px;">
+                                        <h6>Gửi đánh giá của bạn</h6>
+                                        <form action="#">
+                                            <div class="row">
+                                                <div class="col-lg-6 col-md-6">
+                                                    <input type="text" placeholder="Tên của bạn">
+                                                </div>
+                                                <div class="col-lg-6 col-md-6">
+                                                    <input type="text" placeholder="Email">
+                                                </div>
+                                                <div class="col-lg-12 text-center">
+                                                    <textarea placeholder="Viết nhận xét của bạn về sản phẩm này..."></textarea>
+                                                    <button type="submit" class="site-btn">GỬI ĐÁNH GIÁ</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -383,7 +387,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title related__product__title">
-                        <h2>Related Product</h2>
+                        <h2>Sản phẩm liên quan</h2>
                     </div>
                 </div>
             </div>
@@ -398,14 +402,14 @@
                             </ul>
                         </div>
                         <div class="product__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Zing</a></h6>
+                            <h5>500.000 VND</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/product/product-2.jpg">
+                        <div class="product__item__pic set-bg" data-setbg="img/product/product-11.jpg">
                             <ul class="product__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -413,8 +417,8 @@
                             </ul>
                         </div>
                         <div class="product__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Gosu</a></h6>
+                            <h5>500.00 VND</h5>
                         </div>
                     </div>
                 </div>
@@ -428,8 +432,8 @@
                             </ul>
                         </div>
                         <div class="product__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Viettel</a></h6>
+                            <h5>500.000 VND</h5>
                         </div>
                     </div>
                 </div>
@@ -443,8 +447,8 @@
                             </ul>
                         </div>
                         <div class="product__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">funcard</a></h6>
+                            <h5>500.000 VND</h5>
                         </div>
                     </div>
                 </div>
